# hello-with-icu

./: .gitignore  Makefile.am  README.md  configure.ac  main.cpp
locales/: Makefile.am
src/: Makefile.am  main.cpp
